@@ -1,3 +1,8 @@
+2006-11-13  Paolo Carlini  <pcarlini@suse.de>
+
+	* src/debug.cc (_Safe_sequence_base::_M_revalidate_singular): Fix
+	pasto, advance __iter only once per iteration.
+
 2006-11-10  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/locale/gnu/c_locale.cc (__convert_to_v): Prefer
